turmites.lessons.turmites.langtoncolors.LangtonColors.scala.error
LangtonsAnt:18: error: type mismatch;
 found   : Unit
 required: java.awt.Color
	var k : Color = PosCouleur(getCouleurSol(),colors) 
                                  ^LangtonsAnt:19: error: type mismatch;
 found   : java.awt.Color
 required: Int
	rule(k) match{  
             ^LangtonsAnt:20: error: type mismatch;
 found   : java.awt.Color
 required: Int
		case "R"	=> setCouleurSol(colors(k));droite();avance()
                                                        ^LangtonsAnt:21: error: type mismatch;
 found   : java.awt.Color
 required: Int
		case "L" =>  setCouleurSol(colors(k));gauche();avance()
                                                  ^