turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def setCouleurSol(c:Color) {
	setCouleurBrosse(c)
	baisseBrosse()
	leveBrosse()
}

def PosCouleur (c:Color, T:Array[Color]) {
		var l = T.length
		for (i<- 0 to l-1) {
			if (c == T(i) ) {return i}
		}
	return -1}


def step(rule:Array[Char], colors:Array[Color]) {
	
	var k : Color = PosCouleur(getCouleurSol(),colors) 
	rule(k) match{  
		case "R"	=> setCouleurSol(colors(k));droite();avance()
		case "L" =>  setCouleurSol(colors(k));gauche();avance()
	}
	
}
